adding post survey task

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent: started! 0.0008308887481689453s\n",
+      "parent: waiting for children to finish...\n",
+      "parent: all done! 2.0038490295410156s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time \n",
+    "async def child1(): \n",
+    "    await trio.sleep(0.5)\n",
+    "\n",
+    "async def child2(): \n",
+    "    await trio.sleep(1.5)\n",
+    "\n",
+    "start_time = time.time() \n",
+    "async def parent():\n",
+    "    print(f\"parent: started! {time.time()-start_time}s\")\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        await child1() \n",
+    "        await child2()\n",
+    "        print(\"parent: waiting for children to finish...\")\n",
+    "        # -- we exit the nursery block here --\n",
+    "    print(f\"parent: all done! {time.time()-start_time}s\")\n",
+    "trio.run(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting lemon\n",
+      "Getting apple\n",
+      "Getting orange\n",
+      "Task complete\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def get_lemon(): \n",
+    "    print(\"Getting lemon\")\n",
+    "    await trio.sleep(1)\n",
+    "    result = \"lemon\"\n",
+    "    return result\n",
+    "\n",
+    "async def get_apple(): \n",
+    "    print(\"Getting apple\")\n",
+    "    await trio.sleep(0.5)\n",
+    "    result = \"apple\"\n",
+    "    return result\n",
+    "\n",
+    "async def get_orange(): \n",
+    "    print(\"Getting orange\")\n",
+    "    await trio.sleep(0.25)\n",
+    "    result = \"orange\"\n",
+    "    return result\n",
+    "\n",
+    "async def main(): \n",
+    "    async with trio.open_nursery() as nursery: \n",
+    "        output = nursery.start_soon(get_lemon)\n",
+    "        output = nursery.start_soon(get_apple)\n",
+    "        output = nursery.start_soon(get_orange)\n",
+    "    print(\"Task complete\")\n",
+    "    print(output)\n",
+    "    \n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "use 'async with open_nursery(...)', not 'with open_nursery(...)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m         nursery.start_soon(foo)\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[31m[... skipping hidden 1 frame]\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmain\u001b[39m(): \n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_nursery\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstart_soon\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfoo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py:1071\u001b[39m, in \u001b[36mNurseryManager.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1070\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__enter__\u001b[39m(\u001b[38;5;28mself\u001b[39m) -> NoReturn:\n\u001b[32m-> \u001b[39m\u001b[32m1071\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m   1072\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33muse \u001b[39m\u001b[33m'\u001b[39m\u001b[33masync with open_nursery(...)\u001b[39m\u001b[33m'\u001b[39m\u001b[33m, not \u001b[39m\u001b[33m'\u001b[39m\u001b[33mwith open_nursery(...)\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1073\u001b[39m     )\n",
+      "\u001b[31mRuntimeError\u001b[39m: use 'async with open_nursery(...)', not 'with open_nursery(...)'"
+     ]
+    }
+   ],
+   "source": [
+    "async def foo(): \n",
+    "    print(\"Start\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"End\")\n",
+    "\n",
+    "async def main(): \n",
+    "    with trio.open_nursery() as nursery: \n",
+    "        nursery.start_soon(foo)\n",
+    "    print(\"Task complete\")\n",
+    "\n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,13 +216,10 @@
       "Worker 2 waiting for semaphore\n",
       "Worker 2 acquired semaphore\n",
       "Worker 3 waiting for semaphore\n",
-      "Worker 4 waiting for semaphore\n",
       "Worker 1 releasing semaphore\n",
       "Worker 3 acquired semaphore\n",
       "Worker 2 releasing semaphore\n",
-      "Worker 4 acquired semaphore\n",
       "Worker 3 releasing semaphore\n",
-      "Worker 4 releasing semaphore\n",
       "All workers completed\n"
      ]
     }
@@ -123,7 +236,7 @@
     "    semaphore = trio.Semaphore(2)\n",
     "    \n",
     "    async with trio.open_nursery() as nursery:\n",
-    "        for i in range(1, 5):\n",
+    "        for i in range(1, 4):\n",
     "            nursery.start_soon(worker, i, semaphore)\n",
     "            await trio.sleep(0.1)\n",
     "            \n",
@@ -241,13 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting task\n"
+     ]
+    }
+   ],
    "source": [
     "# Review the code and describe the bug: -> task never completes because of timeout function\n",
     "async def run_with_timeout():\n",
     "    with trio.move_on_after(1):\n",
+    "        print(\"Starting task\")\n",
     "        await long_running_task()\n",
     "\n",
     "async def long_running_task():\n",
@@ -443,11 +565,6 @@
     "\n",
     "trio.run(main)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
