--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -10,10 +10,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def timer() -> None: \n",
+    "    i = 1 \n",
+    "    while True: \n",
+    "        await trio.sleep(1)\n",
+    "        if i ==1: \n",
+    "            print(f\"{i} second has passed\")\n",
+    "        else: \n",
+    "            print(f\"{i} seconds have passed\")\n",
+    "        i+=1 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Q4: Given this code snippet, what would be the order of what is printed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def get_user_id(user_id: int) -> dict:\n",
+    "    await trio.sleep(1)\n",
+    "    if user_id % 1 == 0: \n",
+    "        return {\"id\": user_id, \"username\": f\"User {user_id}\"}\n",
+    "    else: \n",
+    "        raise ValueError(f\"User {user_id} not found\")\n",
+    "\n",
+    "async def get_user_data(user_ids: list[int]) -> dict[dict]:\n",
+    "    results = {}\n",
+    "    \n",
+    "    async def _fetch_and_store(user_id): \n",
+    "        try: \n",
+    "            result = await get_user_id(user_id)\n",
+    "            results[user_id] = {\"status\": \"success\", \"data\": result}\n",
+    "        except ValueError as e: \n",
+    "            results[user_id] = {\"status\": \"error\", \"error\": str(e)}\n",
+    "\n",
+    "    async with trio.open_nursery() as nursery: \n",
+    "        for user_id in user_ids: \n",
+    "            nursery.start_soon(_fetch_and_store, user_id)\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
