adding new question about httpx

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trio"
+    "import trio\n",
+    "import httpx"
    ]
   },
   {
@@ -428,16 +429,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Service is up!\n",
+      "Service is up!\n"
+     ]
+    }
+   ],
    "source": [
     "# What's the problem with this code? -> client is created each time and never closed\n",
+    "import httpx \n",
+    "\n",
     "async def fetch_data_repeatedly():\n",
-    "    while True:\n",
+    "    i = 1 \n",
+    "    while i < 3:\n",
     "        client = httpx.AsyncClient()\n",
     "        try:\n",
-    "            response = await client.get(\"https://api.example.com/status\")\n",
+    "            response = await client.get(\"https://api.worldbank.org/v2/country/ARB/indicator/NY.GDP.MKTP.CD?date=2019&format=json\")\n",
     "            if response.status_code == 200:\n",
     "                print(\"Service is up!\")\n",
     "            else:\n",
@@ -445,7 +458,10 @@
     "        except Exception as e:\n",
     "            print(f\"Error occurred: {e}\")\n",
     "        \n",
-    "        await trio.sleep(60)"
+    "        await trio.sleep(3)\n",
+    "        i+=1\n",
+    "\n",
+    "trio.run(fetch_data_repeatedly)"
    ]
   },
   {
@@ -611,6 +627,100 @@
     "    nursery.start_soon(say_world)\n",
     "\n",
     "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading The Adventures of Sherlock Holmes...\n",
+      "Downloading Pride and Prejudice...\n",
+      "Downloading War and Peace...\n",
+      "Finished downloading The Adventures of Sherlock Holmes\n",
+      "Finished downloading Pride and Prejudice\n",
+      "Finished downloading War and Peace\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def download_and_save_text(client, url, filename):\n",
+    "    print(f\"Downloading {filename}...\")\n",
+    "    try:\n",
+    "        response = await client.get(url)\n",
+    "        response.raise_for_status()\n",
+    "        \n",
+    "        with open(f\"downloads/{filename}.txt\", \"w\") as f:\n",
+    "            f.write(response.text)\n",
+    "        \n",
+    "        print(f\"Finished downloading {filename}\")\n",
+    "    except httpx.HTTPError as e:\n",
+    "        print(f\"Error downloading {filename}: {e}\")\n",
+    "\n",
+    "async def task3():\n",
+    "    urls = [\n",
+    "        (\"https://www.gutenberg.org/files/2600/2600-0.txt\", \"War and Peace\"),\n",
+    "        (\"https://www.gutenberg.org/files/1342/1342-0.txt\", \"Pride and Prejudice\"),\n",
+    "        (\"https://www.gutenberg.org/files/1661/1661-0.txt\", \"The Adventures of Sherlock Holmes\")\n",
+    "    ]\n",
+    "    \n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        async with trio.open_nursery() as nursery:\n",
+    "            for url, name in urls:\n",
+    "                nursery.start_soon(download_and_save_text, client, url, name)\n",
+    "\n",
+    "trio.run(task3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading The Adventures of Sherlock Holmes...\n",
+      "Downloading Pride and Prejudice...\n",
+      "Downloading War and Peace...\n",
+      "Finished downloading The Adventures of Sherlock Holmes\n",
+      "Finished downloading Pride and Prejudice\n",
+      "Finished downloading War and Peace\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def download_and_save_text(url, filename):\n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        print(f\"Downloading {filename}...\")\n",
+    "        try:\n",
+    "            response = await client.get(url)\n",
+    "            response.raise_for_status()\n",
+    "            \n",
+    "            with open(f\"downloads/{filename}.txt\", \"w\") as f:\n",
+    "                f.write(response.text)\n",
+    "            \n",
+    "            print(f\"Finished downloading {filename}\")\n",
+    "        except httpx.HTTPError as e:\n",
+    "            print(f\"Error downloading {filename}: {e}\")\n",
+    "\n",
+    "async def task3():\n",
+    "    urls = [\n",
+    "        (\"https://www.gutenberg.org/files/2600/2600-0.txt\", \"War and Peace\"),\n",
+    "        (\"https://www.gutenberg.org/files/1342/1342-0.txt\", \"Pride and Prejudice\"),\n",
+    "        (\"https://www.gutenberg.org/files/1661/1661-0.txt\", \"The Adventures of Sherlock Holmes\")\n",
+    "    ]\n",
+    "    \n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        for url, name in urls:\n",
+    "            nursery.start_soon(download_and_save_text, url, name)\n",
+    "\n",
+    "trio.run(task3)"
    ]
   }
  ],
