adding pre-task python questions

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -678,49 +678,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading The Adventures of Sherlock Holmes...\n",
-      "Downloading Pride and Prejudice...\n",
-      "Downloading War and Peace...\n",
-      "Finished downloading The Adventures of Sherlock Holmes\n",
-      "Finished downloading Pride and Prejudice\n",
-      "Finished downloading War and Peace\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{1: 'not_found', 3: 'not_found', 101: 'Record-101'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "async def download_and_save_text(url, filename):\n",
-    "    async with httpx.AsyncClient() as client:\n",
-    "        print(f\"Downloading {filename}...\")\n",
+    "def fetch_record(record_id: int) -> str:\n",
+    "    if record_id > 100: \n",
+    "        return f\"Record-{record_id}\"\n",
+    "    else: \n",
+    "        raise KeyError(f\"Record {record_id} not found in database\")\n",
+    "\n",
+    "#A\n",
+    "def process_records(id_list):\n",
+    "    records = {}\n",
+    "    for record_id in id_list:\n",
+    "        data = fetch_record(record_id)\n",
+    "        records[record_id] = data\n",
+    "    return records\n",
+    "\n",
+    "#B\n",
+    "def process_records(id_list):\n",
+    "    records = {}\n",
+    "    for record_id in id_list:\n",
     "        try:\n",
-    "            response = await client.get(url)\n",
-    "            response.raise_for_status()\n",
-    "            \n",
-    "            with open(f\"downloads/{filename}.txt\", \"w\") as f:\n",
-    "                f.write(response.text)\n",
-    "            \n",
-    "            print(f\"Finished downloading {filename}\")\n",
-    "        except httpx.HTTPError as e:\n",
-    "            print(f\"Error downloading {filename}: {e}\")\n",
+    "            data = fetch_record(record_id)\n",
+    "        except ValueError:\n",
+    "            data = 'not_found'\n",
+    "        records[record_id] = data\n",
+    "    return records\n",
     "\n",
-    "async def task3():\n",
-    "    urls = [\n",
-    "        (\"https://www.gutenberg.org/files/2600/2600-0.txt\", \"War and Peace\"),\n",
-    "        (\"https://www.gutenberg.org/files/1342/1342-0.txt\", \"Pride and Prejudice\"),\n",
-    "        (\"https://www.gutenberg.org/files/1661/1661-0.txt\", \"The Adventures of Sherlock Holmes\")\n",
-    "    ]\n",
-    "    \n",
-    "    async with trio.open_nursery() as nursery:\n",
-    "        for url, name in urls:\n",
-    "            nursery.start_soon(download_and_save_text, url, name)\n",
+    "#C \n",
+    "def process_records(id_list):\n",
+    "    records = {}\n",
+    "    for record_id in id_list:\n",
+    "        try:\n",
+    "            data = fetch_record(record_id)\n",
+    "        except:\n",
+    "            data = 'not_found'\n",
+    "        records[record_id] = data\n",
+    "    return records\n",
     "\n",
-    "trio.run(task3)"
+    "#D\n",
+    "def process_records(id_list):\n",
+    "    records = {}\n",
+    "    for record_id in id_list:\n",
+    "        if record_id <= 100:\n",
+    "            records[record_id] = 'not_found'\n",
+    "        else:\n",
+    "            records[record_id] = fetch_record(record_id)\n",
+    "    return records\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q: Which of the following correctly downloads and saves a text file from a URL using the requests library?\n",
+    "\n",
+    "#A \n",
+    "import requests\n",
+    "def download_file(url, filename):\n",
+    "    response = requests.get(url)\n",
+    "    with open(filename, 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "\n",
+    "#B\n",
+    "import requests\n",
+    "def download_file(url, filename):\n",
+    "    response = requests.put(url)\n",
+    "    with open(filename, 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "\n",
+    "#C\n",
+    "import requests\n",
+    "def download_file(url, filename):\n",
+    "    response = requests.get(url)\n",
+    "    with open(filename, 'w') as file:\n",
+    "        file.write(response)\n",
+    "#D\n",
+    "import requests\n",
+    "def download_file(url, filename):\n",
+    "    with open(filename, 'wb') as file:\n",
+    "        file.write(requests.content(url))"
    ]
   }
  ],
