adding replacement snippets part 1

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import trio\n",
     "import httpx"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -182,34 +189,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Main\n",
-      "Start\n",
-      "Middle\n",
-      "End\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "async def example(): \n",
+    "def example(): \n",
     "    print(\"Start\")\n",
     "    await trio.sleep(1)\n",
     "    print(\"Middle\")\n",
     "    await trio.sleep(1)\n",
     "    print(\"End\")\n",
     "\n",
+    "trio.run(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def example(): \n",
+    "    await trio.sleep(1)\n",
+    "    result = \"Hello World\"\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lemon\n",
+      "Orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def example(): \n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Lemon\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Orange\")\n",
+    "\n",
     "async def main(): \n",
     "    async with trio.open_nursery() as nursery: \n",
     "        nursery.start_soon(example)\n",
-    "        print(\"Main\")\n",
+    "        print(\"Apple\")\n",
     "\n",
-    "trio.run(main)"
+    "trio.run(example)"
    ]
   },
   {
