adding replacement snippets part 1

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -621,6 +621,25 @@
     "    async with trio.open_nursery() as nursery:\n",
     "        nursery.start_soon(say_hello)\n",
     "        nursery.start_soon(say_world)\n",
+    "    print(\"Task complete\")\n",
+    "\n",
+    "trio.run(main)\n",
+    "\n",
+    "import trio\n",
+    "\n",
+    "async def say_hello():\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "async def say_world():\n",
+    "    await trio.sleep(2)\n",
+    "    print(\"World\")\n",
+    "\n",
+    "async def main():\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        nursery.start_soon(say_hello)\n",
+    "        nursery.start_soon(say_world)\n",
+    "        print(\"Task complete\")\n",
     "\n",
     "trio.run(main)\n",
     "\n",
