adding replacement snippets part 2

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -205,6 +205,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*yawn* Going to sleep\n",
+      "Woke up after 0.00 seconds, feeling well rested!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_33457/3884429731.py:8: RuntimeWarning: coroutine 'sleep' was never awaited\n",
+      "  trio.sleep(2 * x)\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import trio\n",
+    "\n",
+    "async def broken_double_sleep(x):\n",
+    "    print(\"*yawn* Going to sleep\")\n",
+    "    start_time = time.perf_counter()\n",
+    "\n",
+    "    trio.sleep(2 * x)\n",
+    "\n",
+    "    sleep_time = time.perf_counter() - start_time\n",
+    "    print(f\"Woke up after {sleep_time:.2f} seconds, feeling well rested!\")\n",
+    "\n",
+    "trio.run(broken_double_sleep, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
