changing trio run function

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -87,6 +87,7 @@
     }
    ],
    "source": [
+    "import trio\n",
     "import time \n",
     "async def child1(): \n",
     "    await trio.sleep(0.5)\n",
@@ -124,6 +125,7 @@
     }
    ],
    "source": [
+    "import trio\n",
     "async def get_lemon(): \n",
     "    print(\"Getting lemon\")\n",
     "    await trio.sleep(1)\n",
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,9 +167,9 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m         nursery.start_soon(foo)\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m         nursery.start_soon(foo)\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m)\u001b[49m\n",
       "    \u001b[31m[... skipping hidden 1 frame]\u001b[39m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmain\u001b[39m(): \n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_nursery\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstart_soon\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfoo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmain\u001b[39m(): \n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_nursery\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnursery\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstart_soon\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfoo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTask complete\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py:1071\u001b[39m, in \u001b[36mNurseryManager.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1070\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__enter__\u001b[39m(\u001b[38;5;28mself\u001b[39m) -> NoReturn:\n\u001b[32m-> \u001b[39m\u001b[32m1071\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m   1072\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33muse \u001b[39m\u001b[33m'\u001b[39m\u001b[33masync with open_nursery(...)\u001b[39m\u001b[33m'\u001b[39m\u001b[33m, not \u001b[39m\u001b[33m'\u001b[39m\u001b[33mwith open_nursery(...)\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1073\u001b[39m     )\n",
       "\u001b[31mRuntimeError\u001b[39m: use 'async with open_nursery(...)', not 'with open_nursery(...)'"
      ]
@@ -237,7 +239,7 @@
     "    trio.sleep(2 * x)\n",
     "\n",
     "    sleep_time = time.perf_counter() - start_time\n",
-    "    print(f\"Woke up after {sleep_time:.2f} seconds, feeling well rested!\")\n",
+    "    print(f\"Woke up after {sleep_time} seconds!\")\n",
     "\n",
     "trio.run(broken_double_sleep, 3)"
    ]
@@ -248,10 +250,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import trio\n",
     "async def example(): \n",
     "    await trio.sleep(1)\n",
     "    result = \"Hello World\"\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Lemon\n",
+      "Orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "import trio\n",
+    "async def example(): \n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Lemon\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Orange\")\n",
+    "\n",
+    "async def main(): \n",
+    "    async with trio.open_nursery() as nursery: \n",
+    "        nursery.start_soon(example)\n",
+    "        print(\"Apple\")\n",
+    "\n",
+    "trio.run(main)"
    ]
   },
   {
@@ -292,10 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parent: starting\n",
+      "Parent: spawned first subtask\n",
+      "Subtask 1: starting\n",
+      "Parent: spawned second subtask\n",
+      "Subtask 2: starting\n",
+      "Subtask 1: finished\n",
+      "Subtask 2: finished\n",
+      "Parent: subtasks complete\n"
+     ]
+    }
+   ],
    "source": [
+    "import trio\n",
     "async def task_with_subtasks():\n",
     "    print(\"Parent: starting\")\n",
     "    async with trio.open_nursery() as subtask_nursery:\n",
