adding trio imports

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,7 @@
     }
    ],
    "source": [
+    "import trio\n",
     "async def foo(): \n",
     "    print(\"Start\")\n",
     "    await trio.sleep(1)\n",
@@ -507,11 +508,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Review the following code snippet and identify the bug -> does not execute async bc of the await\n",
+    "import trio\n",
+    "async def process_item(item):\n",
+    "    return item * 2\n",
+    "\n",
     "async def process_data(items):\n",
     "    results = []\n",
     "    async with trio.open_nursery() as nursery:\n",
@@ -605,6 +610,7 @@
    ],
    "source": [
     "# what is wrong with this code? where is the await missing? \n",
+    "import trio\n",
     "async def fetch_data(user_id):\n",
     "    await trio.sleep(1)\n",
     "    return {'id': user_id, 'data': f'User data for {user_id}'}\n",
@@ -646,7 +652,7 @@
    ],
    "source": [
     "# what is wrong with this code? # nursery not properly open \n",
-    "\n",
+    "import trio \n",
     "async def process_task(result_dict):\n",
     "    await trio.sleep(2)\n",
     "    result_dict['status'] = 'completed'\n",
