new simplified question for post survey

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -424,36 +424,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Task 1 starting\n",
-      "Task 2 starting\n",
-      "Task 3 starting\n",
-      "Caught: Exceptions from Trio nursery (1 sub-exception)\n",
-      "Main complete\n"
+      "  + Exception Group Traceback (most recent call last):\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py\", line 3549, in run_code\n",
+      "  |     exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  |     ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 14, in <module>\n",
+      "  |     trio.run(main)\n",
+      "  |     ~~~~~~~~^^^^^^\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 2423, in run\n",
+      "  |     raise runner.main_task_outcome.error\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 9, in main\n",
+      "  |     async with trio.open_nursery() as nursery:\n",
+      "  |                ~~~~~~~~~~~~~~~~~^^\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 1058, in __aexit__\n",
+      "  |     raise combined_error_from_nursery\n",
+      "  | ExceptionGroup: Exceptions from Trio nursery (1 sub-exception)\n",
+      "  +-+---------------- 1 ----------------\n",
+      "    | Traceback (most recent call last):\n",
+      "    |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 4, in task\n",
+      "    |     raise ValueError(\"Task 2 fails\")\n",
+      "    | ValueError: Task 2 fails\n",
+      "    +------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "import trio\n",
     "async def task(n):\n",
-    "    print(f\"Task {n} starting\")\n",
     "    if n == 2:\n",
     "        raise ValueError(\"Task 2 fails\")\n",
     "    await trio.sleep(0.5)\n",
     "    print(f\"Task {n} ending\")\n",
     "\n",
     "async def main():\n",
-    "    try:\n",
-    "        async with trio.open_nursery() as nursery:\n",
-    "            for i in range(1, 4):\n",
-    "                nursery.start_soon(task, i)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Caught: {e}\")\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        for i in [1, 2, 3]:\n",
+    "            nursery.start_soon(task, i)\n",
     "    print(\"Main complete\")\n",
     "\n",
     "trio.run(main)"
