--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -43,16 +43,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  + Exception Group Traceback (most recent call last):\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py\", line 3549, in run_code\n",
+      "  |     exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  |     ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/3710206440.py\", line 21, in <module>\n",
+      "  |     trio.run(main)\n",
+      "  |     ~~~~~~~~^^^^^^\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 2423, in run\n",
+      "  |     raise runner.main_task_outcome.error\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/3710206440.py\", line 14, in main\n",
+      "  |     async with trio.open_nursery() as nursery:\n",
+      "  |                ~~~~~~~~~~~~~~~~~^^\n",
+      "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 1058, in __aexit__\n",
+      "  |     raise combined_error_from_nursery\n",
+      "  | ExceptionGroup: Exceptions from Trio nursery (1 sub-exception)\n",
+      "  +-+---------------- 1 ----------------\n",
+      "    | Traceback (most recent call last):\n",
+      "    |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/3710206440.py\", line 9, in get_user_id\n",
+      "    |     raise ValueError(f\"User {user_id} not found\")\n",
+      "    | ValueError: User 5 not found\n",
+      "    +------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "async def get_user_id(user_id: int) -> dict:\n",
+    "import trio \n",
+    "user_ids = [1, 2, 3, 4, 5]\n",
+    "async def get_user_id(user_id: int, my_results: dict) -> dict:\n",
     "    await trio.sleep(1)\n",
-    "    if user_id % 1 == 0: \n",
-    "        return {\"id\": user_id, \"username\": f\"User {user_id}\"}\n",
+    "    if user_id % 2 == 0: \n",
+    "        my_results[user_id] = f\"User {user_id}\"\n",
     "    else: \n",
+    "        my_results[user_id] = f\"error\"\n",
     "        raise ValueError(f\"User {user_id} not found\")\n",
+    "\n",
+    "async def main():\n",
+    "    results = {}\n",
+    "    try:\n",
+    "        async with trio.open_nursery() as nursery:\n",
+    "            for user_id in user_ids:\n",
+    "                nursery.start_soon(get_user_id, user_id, results)\n",
+    "    except ValueError:\n",
+    "        print(\"ValueError\")\n",
+    "        \n",
+    "    print(results)\n",
+    "\n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5: {'status': 'success', 'data': {'id': 5, 'username': 'User 5'}}, 4: {'status': 'success', 'data': {'id': 4, 'username': 'User 4'}}, 3: {'status': 'success', 'data': {'id': 3, 'username': 'User 3'}}, 2: {'status': 'success', 'data': {'id': 2, 'username': 'User 2'}}, 1: {'status': 'success', 'data': {'id': 1, 'username': 'User 1'}}}\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "async def get_user_data(user_ids: list[int]) -> dict[dict]:\n",
     "    results = {}\n",
@@ -68,7 +128,21 @@
     "        for user_id in user_ids: \n",
     "            nursery.start_soon(_fetch_and_store, user_id)\n",
     "    \n",
-    "    return results"
+    "    return results\n",
+    "\n",
+    "async def get_user_id(user_id: int) -> dict:\n",
+    "    await trio.sleep(1)\n",
+    "    if user_id % 1 == 0: \n",
+    "        return {\"id\": user_id, \"username\": f\"User {user_id}\"}\n",
+    "    else: \n",
+    "        raise ValueError(f\"User {user_id} not found\")\n",
+    "\n",
+    "\n",
+    "async def main():\n",
+    "    user_ids = [1, 2, 3, 4, 5]\n",
+    "    print(await get_user_data(user_ids))\n",
+    "\n",
+    "trio.run(main)"
    ]
   },
   {
