adding small fix

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -82,7 +82,7 @@
     "    if user_id % 2 == 0: \n",
     "        my_results[user_id] = f\"User {user_id}\"\n",
     "    else: \n",
-    "        my_results[user_id] = f\"error\"\n",
+    "        my_results[user_id] = \"error\"\n",
     "        raise ValueError(f\"User {user_id} not found\")\n",
     "\n",
     "async def main():\n",
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -509,12 +509,12 @@
       "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py\", line 3549, in run_code\n",
       "  |     exec(code_obj, self.user_global_ns, self.user_ns)\n",
       "  |     ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 14, in <module>\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/2163059941.py\", line 14, in <module>\n",
       "  |     trio.run(main)\n",
       "  |     ~~~~~~~~^^^^^^\n",
       "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 2423, in run\n",
       "  |     raise runner.main_task_outcome.error\n",
-      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 9, in main\n",
+      "  |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/2163059941.py\", line 9, in main\n",
       "  |     async with trio.open_nursery() as nursery:\n",
       "  |                ~~~~~~~~~~~~~~~~~^^\n",
       "  |   File \"/Users/jhs/Code/AFP/skill-dev/.venv/lib/python3.13/site-packages/trio/_core/_run.py\", line 1058, in __aexit__\n",
@@ -522,7 +522,7 @@
       "  | ExceptionGroup: Exceptions from Trio nursery (1 sub-exception)\n",
       "  +-+---------------- 1 ----------------\n",
       "    | Traceback (most recent call last):\n",
-      "    |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_16537/2163059941.py\", line 4, in task\n",
+      "    |   File \"/var/folders/jc/ctcxyx_55yqb7m0dg7sj4clm0000gn/T/ipykernel_96066/2163059941.py\", line 4, in task\n",
       "    |     raise ValueError(\"Task 2 fails\")\n",
       "    | ValueError: Task 2 fails\n",
       "    +------------------------------------\n"
