final results and analysis

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -12,10 +12,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1s\n"
+     ]
+    }
+   ],
+   "source": [
+    "seconds = 1\n",
+    "print(f\"{seconds}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting...\n",
+      "1s\n",
+      "2s\n",
+      "Hello, World!\n",
+      "Completed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import trio\n",
+    "import time\n",
+    "import httpx\n",
+    "import os\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "############## TASK 1 ###################\n",
+    "async def timer() -> None: \n",
+    "    \"\"\"Prints elapsed time in seconds, starting from 1. Waits 1 second before printing '1s', then prints each subsequent second ('2s', '3s', etc.) at 1-second intervals indefinitely.\"\"\"\n",
+    "    \n",
+    "    counter = 1\n",
+    "    while True:\n",
+    "        await trio.sleep(1)\n",
+    "        print(f'{counter}s')\n",
+    "        counter+=1\n",
+    "\n",
+    "async def delayed_hello() -> None: \n",
+    "    \"\"\"Sleeps for 2.1 seconds and the prints 'Hello, World!' \"\"\"\n",
+    "    await trio.sleep(2.1)\n",
+    "    print(\"Hello, World!\")\n",
+    "\n",
+    "async def task1():\n",
+    "    \"\"\"\n",
+    "    In this task, you will use the trio library to write two async functions. \n",
+    "    Your task is to complete the timer and delayed_hello functions. \n",
+    "    \"\"\"\n",
+    "    print(\"Starting...\")\n",
+    "    TIMEOUT = 2.5\n",
+    "    with trio.move_on_after(TIMEOUT): \n",
+    "        # TODO: start trio nursery\n",
+    "        async with trio.open_nursery() as nursery:\n",
+    "        # TODO: start timer function\n",
+    "            nursery.start_soon(timer)\n",
+    "        # TODO: start delayed_hello\n",
+    "            nursery.start_soon(delayed_hello)\n",
+    "        pass \n",
+    "    print(\"Completed!\")\n",
+    "    return \n",
+    "\n",
+    "############## END TASK 1 ###################\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    trio.run(task1)"
+   ]
   },
   {
    "cell_type": "code",
